# Monarch-Forecast

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  tach.toml  vulture_whitelist.py
.github/workflows/: build.yml  ci.yml
src/: main.py
src/auth/: login_view.py  session_manager.py
src/data/: cache.py  cached_client.py  credit_cards.py  demo_client.py  demo_data.py  history.py  models.py  monarch_client.py  preferences.py  recurring.py  recurring_detector.py
src/forecast/: credit_cards.py  engine.py  models.py
src/utils/: date_helpers.py  updater.py
src/views/: accuracy.py  adjustments.py  alerts.py  calendar_popover.py  chart.py  dashboard.py  transactions_table.py  update_banner.py
tests/: conftest.py  factories.py  test_accessibility.py  test_alerts.py  test_cache.py  test_cached_client.py  test_cc_estimation.py  test_credit_cards.py  test_date_helpers.py  test_demo.py  test_engine.py  test_history.py  test_models.py  test_monarch_client.py  test_preferences.py  test_recurring.py  test_recurring_detector.py  test_session_manager.py  test_ui_integrity.py  test_updater.py  test_views_smoke.py
