[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "monarch-forecast"
version = "0.1.0"
description = "Financial forecasting desktop app powered by Monarch Money"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "flet>=0.25.0",
    "monarchmoneycommunity>=1.3.0",
    "keyring>=25.0.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
monarch-forecast = "src.main:main"
