[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-forecast"
version = "0.1.0"
description = "Financial forecasting desktop app powered by Monarch Money"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "flet>=0.84.0",
    "monarchmoneycommunity>=1.3.0",
    "keyring>=25.0.0",
    "matplotlib>=3.8.0",
    "flet-charts>=0.84.0",
    "plotly>=6.6.0",
    "kaleido>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.29",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
monarch-forecast = "src.main:run"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF001", # ambiguous unicode chars — intentional for UI display (e.g. − minus sign)
    "SIM105", # contextlib.suppress — style preference, try/except is fine
    "TCH",    # TYPE_CHECKING imports — can break runtime with Flet
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ty.rules]
# Flet's type stubs are incomplete — these rules produce only false positives
unknown-argument = "warn"
invalid-argument-type = "warn"
missing-argument = "warn"
unresolved-attribute = "warn"
unresolved-import = "warn"
invalid-assignment = "warn"

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "src/**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0
